--- a/index.html
+++ b/index.html
@@ -27,10 +27,18 @@
           </ul>
           <ul class="contacts-list">
             <li class="contacts-item">
-              <a href="./" class="header-contacts">info@devstudio.com</a>
+              <a href="./" class="header-contacts">
+                <svg class="contacts-icon" width="16px" height="12px">
+                  <use href="./img/icons.svg#icon-mail"></use></svg
+                >info@devstudio.com</a
+              >
             </li>
             <li class="contacts-item">
-              <a href="./" class="header-contacts">+38 096 111 11 11</a>
+              <a href="./" class="header-contacts"
+                ><svg class="contacts-icon" width="10px" height="16px">
+                  <use href="./img/icons.svg#icon-smartphone"></use></svg
+                >+38 096 111 11 11</a
+              >
             </li>
           </ul>
         </nav>
@@ -52,24 +60,44 @@
         <div class="container">
           <ul class="advantage-list">
             <li class="advantage-item">
+              <div class="icon-wrap">
+                <svg class="advantage-icon" width="65.32px" height="70px">
+                  <use href="./img/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h2 class="advantage-title">Внимание к деталям</h2>
               <p class="advantage-text">
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
             <li class="advantage-item">
+              <div class="icon-wrap">
+                <svg class="advantage-icon" width="66.96px" height="70px">
+                  <use href="./img/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h2 class="advantage-title">Пунктуальность</h2>
               <p class="advantage-text">
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
             <li class="advantage-item">
+              <div class="icon-wrap">
+                <svg class="advantage-icon" width="70px" height="53.69px">
+                  <use href="./img/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h2 class="advantage-title">Планирование</h2>
               <p class="advantage-text">
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
             <li class="advantage-item">
+              <div class="icon-wrap">
+                <svg class="advantage-icon" width="70px" height="53.69px">
+                  <use href="./img/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h2 class="advantage-title">Современные технологии</h2>
               <p class="advantage-text">
                 Значимость этих проблем настолько очевидна, что реализация плановых заданий.
@@ -107,36 +135,179 @@
           <ul class="teammate-list">
             <li class="teammate-item">
               <img src="./img/igor.jpg" alt="фото сотрудника" width="270" height="260" />
-              <h3 class="teammate-name">Игорь Демьяненко</h3>
-              <p class="teammate-position">Product Designer</p>
+              <div class="teammate-wrap">
+                <h3 class="teammate-name">Игорь Демьяненко</h3>
+                <p class="teammate-position">Product Designer</p>
+                <ul class="social-list">
+                  <li class="social-item">
+                    <a href="./" class="social-link"
+                      ><svg class="social-icon" width="20px" height="20px">
+                        <use href="./img/icons.svg#icon-instagram"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-item">
+                    <a href="./" class="social-link"
+                      ><svg class="social-icon" width="20px" height="16.25px">
+                        <use href="./img/icons.svg#icon-twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="social-link"
+                      ><svg class="social-icon" width="10px" height="20px">
+                        <use href="./img/icons.svg#icon-facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-item">
+                    <a href="./" class="social-link">
+                      <svg class="social-icon" width="20px" height="20px">
+                        <use href="./img/icons.svg#icon-linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="teammate-item">
               <img src="./img/olga.jpg" alt="фото сотрудника" width="270" height="260" />
-              <h3 class="teammate-name">Ольга Репина</h3>
-              <p class="teammate-position">Frontend Developer</p>
+              <div class="teammate-wrap">
+                <h3 class="teammate-name">Ольга Репина</h3>
+                <p class="teammate-position">Frontend Developer</p>
+                <ul class="social-list">
+                  <li class="social-item">
+                    <a href="./" class="social-link"
+                      ><svg class="social-icon" width="20px" height="20px">
+                        <use href="./img/icons.svg#icon-instagram"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-item">
+                    <a href="./" class="social-link"
+                      ><svg class="social-icon" width="20px" height="16.25px">
+                        <use href="./img/icons.svg#icon-twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="social-link"
+                      ><svg class="social-icon" width="10px" height="20px">
+                        <use href="./img/icons.svg#icon-facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-item">
+                    <a href="./" class="social-link">
+                      <svg class="social-icon" width="20px" height="20px">
+                        <use href="./img/icons.svg#icon-linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="teammate-item">
               <img src="./img/nikolai.jpg" alt="фото сотрудника" width="270" height="260" />
-              <h3 class="teammate-name">Николай Тарасов</h3>
-              <p class="teammate-position">Marketing</p>
+              <div class="teammate-wrap">
+                <h3 class="teammate-name">Николай Тарасов</h3>
+                <p class="teammate-position">Marketing</p>
+                <ul class="social-list">
+                  <li class="social-item">
+                    <a href="./" class="social-link"
+                      ><svg class="social-icon" width="20px" height="20px">
+                        <use href="./img/icons.svg#icon-instagram"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-item">
+                    <a href="./" class="social-link"
+                      ><svg class="social-icon" width="20px" height="16.25px">
+                        <use href="./img/icons.svg#icon-twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="social-link"
+                      ><svg class="social-icon" width="10px" height="20px">
+                        <use href="./img/icons.svg#icon-facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-item">
+                    <a href="./" class="social-link">
+                      <svg class="social-icon" width="20px" height="20px">
+                        <use href="./img/icons.svg#icon-linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="teammate-item">
               <img src="./img/mihail.jpg" alt="фото сотрудника" width="270" height="260" />
-              <h3 class="teammate-name">Михаил Ермаков</h3>
-              <p class="teammate-position">UI Designer</p>
+              <div class="teammate-wrap">
+                <h3 class="teammate-name">Михаил Ермаков</h3>
+                <p class="teammate-position">UI Designer</p>
+                <ul class="social-list">
+                  <li class="social-item">
+                    <a href="./" class="social-link"
+                      ><svg class="social-icon" width="20px" height="20px">
+                        <use href="./img/icons.svg#icon-instagram"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-item">
+                    <a href="./" class="social-link"
+                      ><svg class="social-icon" width="20px" height="16.25px">
+                        <use href="./img/icons.svg#icon-twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="social-link"
+                      ><svg class="social-icon" width="10px" height="20px">
+                        <use href="./img/icons.svg#icon-facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-item">
+                    <a href="./" class="social-link">
+                      <svg class="social-icon" width="20px" height="20px">
+                        <use href="./img/icons.svg#icon-linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
+              </div>
             </li>
           </ul>
         </div>
       </section>
     </main>
     <footer class="footer section">
-      <div class="container">
-        <a href="./index.html" class="footer-logo"><span class="logo-accent">Web</span>Studio</a>
-        <address class="footer-adress">
-          г. Киев, пр-т Леси Украинки, 26
-          <a href="mailto:info@example.com" class="footer-contacts">info@example.com</a>
-          <a href="tel:+38 099 111 11 11" class="footer-contacts">+38 099 111 11 11</a>
-        </address>
+      <div class="footer container">
+        <div class="address-wrap">
+          <a href="./index.html" class="footer-logo"><span class="logo-accent">Web</span>Studio</a>
+          <address class="footer-adress">
+            г. Киев, пр-т Леси Украинки, 26
+            <a href="mailto:info@example.com" class="footer-contacts">info@example.com</a>
+            <a href="tel:+38 099 111 11 11" class="footer-contacts">+38 099 111 11 11</a>
+          </address>
+        </div>
+        <div class="appeal-wrap">
+          <h3 class="footer-appeal">присоединяйтесь</h3>
+          <ul class="social-list footer">
+            <li class="social-item footer">
+              <a href="./" class="social-link footer"
+                ><svg class="social-icon" width="20px" height="20px">
+                  <use href="./img/icons.svg#icon-instagram"></use></svg
+              ></a>
+            </li>
+            <li class="social-item footer">
+              <a href="./" class="social-link footer"
+                ><svg class="social-icon" width="20px" height="16.25px">
+                  <use href="./img/icons.svg#icon-twitter"></use></svg
+              ></a>
+            </li>
+            <li class="social-item footer">
+              <a href="" class="social-link footer"
+                ><svg class="social-icon" width="10px" height="20px">
+                  <use href="./img/icons.svg#icon-facebook"></use></svg
+              ></a>
+            </li>
+            <li class="social-item footer">
+              <a href="./" class="social-link footer">
+                <svg class="social-icon" width="20px" height="20px">
+                  <use href="./img/icons.svg#icon-linkedin"></use></svg
+              ></a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
