--- a/portfolio.html
+++ b/portfolio.html
@@ -59,63 +59,78 @@
           </ul>
           <ul class="projects-list">
             <li class="projects-item">
-              <img src="./img/laptop.jpg" alt="ноутбук" width="370" />
+              <img class="projects-image" src="./img/laptop.jpg" alt="ноутбук" width="370" />
               <div class="projects-wrap">
                 <h2 class="projects-title">Технокряк</h2>
                 <p class="projects-text">Веб-сайт</p>
               </div>
             </li>
             <li class="projects-item">
-              <img src="/img/basketball.jpg" alt="баскетболисты" width="370" />
+              <img
+                class="projects-image"
+                src="/img/basketball.jpg"
+                alt="баскетболисты"
+                width="370"
+              />
               <div class="projects-wrap">
                 <h2 class="projects-title">Постер New Orlean vs Golden Star</h2>
                 <p class="projects-text">Дизайн</p>
               </div>
             </li>
             <li class="projects-item">
-              <img src="./img/seafoodlogo.jpg" alt="логотип ресторана" width="370" />
+              <img
+                class="projects-image"
+                src="./img/seafoodlogo.jpg"
+                alt="логотип ресторана"
+                width="370"
+              />
               <div class="projects-wrap">
                 <h2 class="projects-title">Ресторан Seafood</h2>
                 <p class="projects-text">Приложение</p>
               </div>
             </li>
             <li class="projects-item">
-              <img src="./img/earphones.jpg" alt="наушники" width="370" />
+              <img class="projects-image" src="./img/earphones.jpg" alt="наушники" width="370" />
               <div class="projects-wrap">
                 <h2 class="projects-title">Проект Prime</h2>
                 <p class="projects-text">Маркетинг</p>
               </div>
             </li>
             <li class="projects-item">
-              <img src="./img/boxes.jpg" alt="две коробки" width="370" />
+              <img class="projects-image" src="./img/boxes.jpg" alt="две коробки" width="370" />
               <div class="projects-wrap">
                 <h2 class="projects-title">Проект Boxes</h2>
                 <p class="projects-text">Приложение</p>
               </div>
             </li>
             <li class="projects-item">
-              <img src="./img/monitor.jpg" alt="монитор" width="370" />
+              <img class="projects-image" src="./img/monitor.jpg" alt="монитор" width="370" />
               <div class="projects-wrap">
                 <h2 class="projects-title">Inspiration has no Borders</h2>
                 <p class="projects-text">Веб-сайт</p>
               </div>
             </li>
             <li class="projects-item">
-              <img src="./img/magazine.jpg" alt="журнал" width="370" />
+              <img class="projects-image" src="./img/magazine.jpg" alt="журнал" width="370" />
               <div class="projects-wrap">
                 <h2 class="projects-title">Издание Limited Edition</h2>
                 <p class="projects-text">Дизайн</p>
               </div>
             </li>
             <li class="projects-item">
-              <img src="./img/tag.jpg" alt="бирка" width="370" />
+              <img class="projects-image" src="./img/tag.jpg" alt="бирка" width="370" />
               <div class="projects-wrap">
                 <h2 class="projects-title">Проект LAB</h2>
                 <p class="projects-text">Маркетинг</p>
               </div>
             </li>
             <li class="projects-item">
-              <img src="./img/laptopwork.jpg" alt="работа с ноутбуком" width="370" />
+              <img
+                class="projects-image"
+                src="./img/laptopwork.jpg"
+                alt="работа с ноутбуком"
+                width="370"
+              />
               <div class="projects-wrap">
                 <h2 class="projects-title">Growing Business</h2>
                 <p>Приложение</p>
