добавляет иконки в секцию наши проекты и на странице портфолио

--- a/index.html
+++ b/index.html
@@ -268,6 +268,50 @@
           </ul>
         </div>
       </section>
+      <!-- ---------------------------Постоянные клиенты ------------------------->
+      <section class="section">
+        <div class="container">
+          <h2 class="section-title">Постоянные клиенты</h2>
+          <ul class="clients-list">
+            <li class="clients-item">
+              <a href="./" class="clients-link"
+                ><svg class="clients-icon" width="41px" height="46.7px">
+                  <use href="./img/icons.svg#icon-yaco"></use></svg
+              ></a>
+            </li>
+            <li class="clients-item">
+              <a href="./" class="clients-link"
+                ><svg class="clients-icon" width="40px" height="52px">
+                  <use href="./img/icons.svg#icon-tagline"></use></svg
+              ></a>
+            </li>
+            <li class="clients-item">
+              <a href="./" class="clients-link"
+                ><svg class="clients-icon" width="43.63px" height="41.18px">
+                  <use href="./img/icons.svg#icon-company"></use></svg
+              ></a>
+            </li>
+            <li class="clients-item">
+              <a href="./" class="clients-link"
+                ><svg class="clients-icon" width="84.44px" height="40.62px">
+                  <use href="./img/icons.svg#icon-fosterpeters"></use></svg
+              ></a>
+            </li>
+            <li class="clients-item">
+              <a href="./" class="clients-link"
+                ><svg class="clients-icon" width="62.54px" height="45.43px">
+                  <use href="./img/icons.svg#icon-brand"></use></svg
+              ></a>
+            </li>
+            <li class="clients-item">
+              <a href="./" class="clients-link"
+                ><svg class="clients-icon" width="93.79px" height="43.93px">
+                  <use href="./img/icons.svg#icon-companytagline"></use></svg
+              ></a>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <footer class="footer section">
       <div class="footer container">
