--- a/portfolio.html
+++ b/portfolio.html
@@ -27,10 +27,18 @@
           </ul>
           <ul class="contacts-list">
             <li class="contacts-item">
-              <a href="./" class="header-contacts">info@devstudio.com</a>
+              <a href="./" class="header-contacts">
+                <svg class="contacts-icon" width="16px" height="12px">
+                  <use href="./img/icons.svg#icon-mail"></use></svg
+                >info@devstudio.com</a
+              >
             </li>
             <li class="contacts-item">
-              <a href="./" class="header-contacts">+38 096 111 11 11</a>
+              <a href="./" class="header-contacts"
+                ><svg class="contacts-icon" width="10px" height="16px">
+                  <use href="./img/icons.svg#icon-smartphone"></use></svg
+                >+38 096 111 11 11</a
+              >
             </li>
           </ul>
         </nav>
@@ -141,13 +149,44 @@
       </section>
     </main>
     <footer class="footer section">
-      <div class="container">
-        <a href="./index.html" class="footer-logo"><span class="logo-accent">Web</span>Studio</a>
-        <address class="footer-adress">
-          г. Киев, пр-т Леси Украинки, 26
-          <a href="mailto:info@example.com" class="footer-contacts">info@example.com</a>
-          <a href="tel:+38 099 111 11 11" class="footer-contacts">+38 099 111 11 11</a>
-        </address>
+      <div class="footer container">
+        <div class="address-wrap">
+          <a href="./index.html" class="footer-logo"><span class="logo-accent">Web</span>Studio</a>
+          <address class="footer-adress">
+            г. Киев, пр-т Леси Украинки, 26
+            <a href="mailto:info@example.com" class="footer-contacts">info@example.com</a>
+            <a href="tel:+38 099 111 11 11" class="footer-contacts">+38 099 111 11 11</a>
+          </address>
+        </div>
+        <div class="appeal-wrap">
+          <h3 class="footer-appeal">присоединяйтесь</h3>
+          <ul class="social-list footer">
+            <li class="social-item footer">
+              <a href="./" class="social-link footer"
+                ><svg class="social-icon" width="20px" height="20px">
+                  <use href="./img/icons.svg#icon-instagram"></use></svg
+              ></a>
+            </li>
+            <li class="social-item footer">
+              <a href="./" class="social-link footer"
+                ><svg class="social-icon" width="20px" height="16.25px">
+                  <use href="./img/icons.svg#icon-twitter"></use></svg
+              ></a>
+            </li>
+            <li class="social-item footer">
+              <a href="" class="social-link footer"
+                ><svg class="social-icon" width="10px" height="20px">
+                  <use href="./img/icons.svg#icon-facebook"></use></svg
+              ></a>
+            </li>
+            <li class="social-item footer">
+              <a href="./" class="social-link footer">
+                <svg class="social-icon" width="20px" height="20px">
+                  <use href="./img/icons.svg#icon-linkedin"></use></svg
+              ></a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
